<resources>
    <string name="app_name">NCNF</string>

    <!-- Strings for Main Menu -->
    <string name="main_map_button">Map</string>
    <string name="main_feedview_button">Events Feed</string>
    <string name="main_event_creation_button">Create Event</string>
    <string name="main_placeholder_event_view">PH Event</string>
    <string name="find_your_friends_button">Find your friends</string>
    <string name="create_group_button">Create a new group</string>

    <!-- Strings used for Map Activity -->
    <string name="map_switch_button">Switch between Events and Venues</string>
    <string name="map_zoom_in_button">Zoom In</string>
    <string name="map_zoom_out_button">Zoom Out</string>
    <string name="map_settings_button">Settings</string>
    <string name="map_marker_arrow">Arrow</string>
    <string name="map_feed_button">Back to Map</string>
    <string name="map_toolbar_error">Error trying to find a place. Please check network connection and try again.</string>

    <!-- String used for Feed Fragment -->
    <string name="feed_event_button">Back to Feed</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_feed">FeedActivity</string>

    <string name="default_event_name">Event Name</string>
    <string name="default_event_description">Event Description</string>
    <string name="default_validate_button">Validate Selection</string>
    <string name="default_select_event_date">Select Event Date</string>
    <string name="create_event_button">Create Event</string>
    <string name="title_event_creation" />
    <string name="event_create_display_dat" />
    <string name="event_create_display_date">Date</string>
    <string name="event_create_time_button">Select Event Time</string>
    <string name="event_create_display_time">Time</string>
    <string name="event_create_hint_name">Event Name</string>
    <string name="event_create_hint_description">Event Description</string>
    <string name="event_create_hint_phone">Contact Phone</string>
    <string name="event_create_hint_postaladdress_">Event Address</string>
    <string name="event_create_hint_emailaddress">Contact Email</string>
    <string name="event_create_hint_price">Event Price</string>
    <string name="event_create_hint_website">Event Website</string>

    <!-- Strings for Settings -->
    <string name="settings_distance_slider">Max distance = </string>
    <string name="settings_accept_button">Accept</string>
    <string name="settings_discard_button">Discard</string>
    <string name="settings_km"> km</string>

    <string name="event_date">Event Date</string>
    <string name="event_owner">Event Owner</string>
    <string name="event_description">Event Description</string>
    <string name="event_location">Event Location</string>
    <string name="profile">Profile</string>
    <string name="disconnected">Disconnected</string>
    <string name="map">Map</string>
    <string name="feedview">FeedView</string>
    <string name="switch_between_events_and_venues">Switch between Events and Venues</string>
    <string name="zoom_in">Zoom in</string>
    <string name="settings">Settings</string>
    <string name="zoom_out">Zoom Out</string>

    <!-- Profile -->
    <string name="welcome_to_your_profile">Welcome to your Profile</string>
    <string name="profile_information_header">Your information</string>
    <string name="profile_settings_header">Settings</string>
    <string name="notification_setting">Notifications</string>
    <string name="notification_setting_on">Notifications enabled</string>
    <string name="notification_setting_off">Notifications disabled</string>
    <string name="log_out">Log Out</string>
    <string name="email_address">Email Address</string>
    <string name="firstname">Firstname...</string>
    <string name="lastname">Lastname...</string>
    <string name="date_of_birth">Date of birth...</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="eventTag">Tag</string>
    <string name="socialObject">Event</string>
    <string name="id">ID</string>
    <string name="data">Data</string>
    <string name="friends">Friends</string>
    <string name="organizations">Organizations</string>
    <string name="bookmark">Bookmark</string>

    <string name="login">Login</string>
    <string name="email_hint">Email...</string>
    <string name="confirm_password">Confirm password...</string>
    <string name="register">Register</string>
    <string name="firebaseNotifications">Registration</string>
    <string name="password_hint">Password...</string>
    <string name="i_m_an_organizer">I\'m an organizer</string>
    <string name="home_profile_button">Profile</string>
    <string name="home_create_event_button">Create socialObject</string>
    <string name="navigation_menu_feed">Feed</string>
    <string name="navigation_menu_map">Map</string>
    <string name="navigation_menu_home">Home</string>
    <string name="event_news_title">Let your attendees know</string>
    <string name="event_news_label">Your update</string>
    <string name="event_news_publish_button">Publish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bookmark">Bookmark</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_user_button">Search User</string>
    <string name="search_user_hint">Search User</string>
    <string name="user_search_title">Search User</string>
    <string name="home_friends_button">Friends</string>
    <string name="home_events_news_button">Events news</string>

    <!-- Friends Requests -->

    <string name="organization_name_hint">Organization Name</string>
    <string name="organization_postal_hint">Postal Address</string>
    <string name="organization_email_hint">Email</string>
    <string name="organization_phone_hint">"Phone Number "</string>
    <string name="organization_validate_button">Validate</string>
    <string name="organization_enter_token_text">Enter Corresponding Event\'s Token</string>
    <string name="organization_enter_token_button_text">\"Validate Token</string>
    <string name="organization_token_hint">Enter Token Here</string>
    <string name="default_organization_name">Club Anaconda</string>
    <string name="enter_token_hint">"ID or Name "</string>
    <string name="invalid_organization_text">Invalid Organization Name</string>
    <string name="no_organizations">You have no Organizations linked to your profile</string>
    <string name="create_organization_button_text">Create Organization</string>

    <!-- Friends Requests -->
    <string name="friends_requests_accept">Accept</string>
    <string name="friends_requests_decline">Decline</string>
    <string name="friends_empty_text">No friends yet</string>
    <string name="empty_friends_recycler_text">No friends yet.</string>
    <string name="empty_search_friend_recycler_text">No matching user.</string>
    <string name="friend_request_accept_text">The request was accepted !</string>
    <string name="friend_request_decline_text">The request was declined !</string>
    <string name="add_to_calendar_button" />
    <string name="add_organization_button_text">Add Organization</string>
    <string name="add_event_organization_button">Create Event</string>
    <string name="button_publish_news">Publish news</string>

    <string name="hint_org_edit_name">Edit Organization name</string>
    <string name="home_groups_button">Groups</string>
    <string name="home_bookmark_button">Bookmark</string>
    <string name="event_save_to_calendar_button">Save to calendar</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="save_to_bookmark">Save to bookmark</string>
    <string name="event_publish_news_button">Publish news</string>


</resources>